# CardDatabaseJunkYGOH-API

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  run.py
src/: main.py
src/dto/http_types/: http_request.py  http_response.py
src/models/mongodb/: mongodb_handler.py
src/models/mongodb/repository/: junk_card_repository.py  test_repository.py
src/routes/card_database/: card_database_controler.py
src/routes/index/: index.py
src/server/: server.py
test/: test_return_cards.py
