[tool.poetry]
name = "junkygohapi"
version = "0.1.0"
description = ""
authors = ["Ronildo22 <ronildo.santos224@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
poetry = "^1.8.4"
flask-pydantic-spec = "^0.6.0"
pylint = "^3.3.1"
pre-commit = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"